# AI-Agent-Tutorial

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
assets/diagrams/: agent-loop.mmd  capstone-flow.mmd  defense-layers.mmd  eval-loop.mmd  langchain-agent.mmd  langgraph-state.mmd  learning-roadmap.mmd  mcp-architecture.mmd  memory-types.mmd  multi-agent-patterns.mmd  production-architecture.mmd  rag-pipeline.mmd  structured-vs-tools.mmd  tool-pipeline.mmd
demos/: __init__.py
demos/01_agent_loop/: README.md  __init__.py  main.py
demos/02_openai_structured/: README.md  __init__.py  main.py  tool_calling.py
demos/03_langchain_agent/: README.md  __init__.py  main.py
demos/04_langgraph_workflow/: README.md  __init__.py  main.py
demos/05_memory/: README.md  __init__.py  main.py
demos/06_rag/: README.md  __init__.py  (+1 more)
docs/: 00-learning-map.md  01-agent-foundations.md  02-models-prompts-structured-output.md  03-tools-and-actions.md  04-langchain-agent.md  05-langgraph-workflow.md  06-memory-and-context.md  07-rag.md  08-multi-agent.md  09-mcp.md  10-reliability-and-safety.md  11-evaluation-observability.md  12-production.md  13-capstone.md  14-teaching-agent.md  glossary.md  reading-list.md  references.md  setup.md
tests/: test_agent_loop.py  test_capstone.py  test_langgraph_workflow.py  test_memory.py  test_multi_agent.py  test_quality.py  test_rag.py  test_service.py  test_structured_output.py  test_tutor_agent.py  test_tutor_api.py  test_tutor_config.py  test_tutor_ingest.py  test_tutor_rag.py
tutor/: README.md  __init__.py  config.py
(+37 files in other folders)
