[project]
name = "ai-agent-tutorial"
version = "0.1.0"
description = "一套从原理到生产的 Python AI Agent 中文教程与可运行 Demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.119,<1",
  "httpx>=0.28,<1",
  "langchain>=1.1,<2",
  "langchain-openai>=1.1,<2",
  "langgraph>=1.0,<2",
  "markdown>=3.10.2",
  "mcp>=1.20,<2",
  "numpy>=2.4.6",
  "openai>=2.8,<3",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.14.2",
  "python-dotenv>=1.1,<2",
  "rich>=14,<15",
  "uvicorn>=0.38,<1",
]

[dependency-groups]
dev = [
  "pytest>=8.4,<10",
  "pytest-asyncio>=1.2,<2",
  "ruff>=0.14,<1",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
